<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".Activities.StartingPage">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        card_view:cardBackgroundColor="#ffffff"
        card_view:cardCornerRadius="10dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toTopof="@id/card_view3">

        <TextView
            android:id="@+id/greetings"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/greetings"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            tools:text="Wie geht's dir heute?" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        card_view:cardCornerRadius="10dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@id/card_view3">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">


            <TextView
                android:id="@+id/last_exp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latest_transactions"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:layout_constraintTop_toTopOf="parent" />



        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="12dp"
        card_view:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/card_view1">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/balance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance_str" />

            <TextView
                android:id="@+id/balance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance_value"
                card_view:layout_constraintLeft_toRightOf="@id/balance_text" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:text="@string/eingabe_plus"
                card_view:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="false"
                android:layout_centerVertical="true"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:text="@string/eingabe_minus"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/button_plus" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>